@@ -225,20 +225,14 @@ AC_DEFINE_UNQUOTED(API_VERSION, "0.5", [Define version of lcdproc API])
 dnl Check compiler flags to dynamically load modules
 AC_MODULES_INFO
 
-
 dnl ######################################################################
-dnl USB support
-dnl
-dnl not all options have effect at the moment
-
-AC_SUBST(libusb_libs)
-AC_SUBST(libusb_cflags)
-
+dnl libusb support
+dnl ######################################################################
 AC_MSG_CHECKING([if libusb support has been enabled]);
 AC_ARG_ENABLE(
   libusb,
-  [  --enable-libusb         compile with USB support using libusb.  ],
-  [ 
+  [AS_HELP_STRING([--disable-libusb],[disable USB support using libusb])],
+  [
     if test "$enableval" != "no"; then
       enable_libusb="yes"
     fi
@@ -248,91 +242,34 @@ AC_ARG_ENABLE(
 AC_MSG_RESULT($enable_libusb) 
 
 if test "$enable_libusb" = "yes"; then
-  AC_PATH_PROG(libusb_config, libusb-config, :)
-
-  AC_ARG_WITH(
-    libusb-includes,
-    [  --with-libusb-includes=DIR  
-                          libusb include files are in DIR
-                          (default: found by libusb-config).  ],
-    [ 
-      if test "$withval" != "no"; then 
-        libusb_includepath="$withval" 
-        libusb_cflags="-I$withval" 
-      fi
-    ],
-    [ 
-      AC_MSG_CHECKING(libusb CFLAGS)
-      if test "x$libusb_config" != x ; then
-        libusb_cflags=`$libusb_config --cflags`
-      else
-        for libusb_includepath in /usr/include /usr/local/include \
-            /usr/include/libusb /usr/local/include/libusb \
-            /usr/include/usb /usr/local/include/usb ; do \
-          if test -f "${libusb_includepath}/usb.h" ; then
-            libusb_cflags="-I$libusb_includepath"
-            break
-          fi
-        done
-      fi
-      AC_MSG_RESULT($libusb_cflags)
-    ]
-  )
-
-  if test x$libusb_includepath != x ; then
-  AC_CHECK_FILE(
-     $libusb_includepath/usb.h,
-    [ : ] ,
-    [ enable_libusb="no" ]
-  )
-  fi
+  PKG_CHECK_MODULES(LIBUSB, libusb, AC_DEFINE([HAVE_LIBUSB], [1], [Define to 1 if you have libusb]), enable_libusb=no)
 fi
+AC_SUBST(LIBUSB_LIBS)
+AC_SUBST(LIBUSB_CFLAGS)
 
-if test "$enable_libusb" = "yes"; then
-  AC_ARG_WITH(
-    libusb-libraries,
-    [  --with-libusb-libraries=DIR 
-                          libusb library files are in DIR
-                          (default: found by libusb-config).  ],
-    [ 
-      if test "$withval" != "no"; then 
-        libusb_libs="-L$withval -lusb" 
-      fi
-    ],
-    [ 
-      AC_MSG_CHECKING(libusb library path)
-      if test "x$libusb_config" != x ; then
-        libusb_libs=`$libusb_config --libs`
-      else
-        for libusb_libpath in /lib /usr/lib /usr/local/lib \
-            /lib/libusb /usr/lib/libusb /usr/local/lib/libusb \
-            /lib/usb /usr/lib/usb /usr/local/lib/usb ; do
-          if test -f "${libusb_libpath}/libusb.a" -o -f "${libusb_libpath}/libusb.so"; then
-            libusb_libs="-L$libusb_libpath -lusb"
-            break
-          fi
-        done
-      fi
-      AC_MSG_RESULT($libusb_libs)
-    ]
-  )
+dnl ######################################################################
+dnl libftdi support
+dnl ######################################################################
+AC_MSG_CHECKING([if libftdi support has been enabled]);
+AC_ARG_ENABLE(
+  libftdi,
+  [AS_HELP_STRING([--disable-libftdi],[disable FTDI support using libftdi])],
+  [
+    if test "$enableval" != "no"; then
+      enable_libftdi="yes"
+    fi
+  ],
+  [ 
+    enable_libftdi="yes"
+  ]
+)
+AC_MSG_RESULT($enable_libftdi) 
 
-  AC_CHECK_LIB(
-    usb,
-    main,
-    [ : ],
-    [ enable_libusb="no" ],
-    $libusb_libs
-  )
+if test "$enable_libftdi" = "yes"; then
+  PKG_CHECK_MODULES(LIBFTDI, libftdi >= 0.8, AC_DEFINE([HAVE_LIBFTDI], [1], [Define to 1 if you have libftdi]), enable_libftdi=no)
 fi
-
-if test "$enable_libusb" = "yes"; then
-  AC_DEFINE(HAVE_LIBUSB,[1],[Define to 1 if you have the libusb library])
-else
-  libusb_libs="";
-  libusb_cflags="";
-fi
-
+AC_SUBST(LIBFTDI_LIBS)
+AC_SUBST(LIBFTDI_CFLAGS)
 
 dnl Select drivers to build
 LCD_DRIVERS_SELECT
