@@ -22,11 +22,13 @@ pkglib_PROGRAMS = @DRIVERS@
 EXTRA_PROGRAMS = bayrad CFontz CFontz633 CFontzPacket curses CwLnx ea65 EyeboxOne g15 glcdlib glk hd44780 icp_a106 imon IOWarrior irman joy lb216 lcdm001 lcterm lirc lis MD8800 ms6931 mtc_s16209x MtxOrb NoritakeVFD picolcd pyramid sed1330 sed1520 serialPOS serialVFD shuttleVFD stv5730 svga t6963 text tyan sli ula200 xosd
 noinst_LIBRARIES = libLCD.a libbignum.a
 
-IOWarrior_CFLAGS =   @libusb_cflags@ $(AM_CFLAGS)
-hd44780_CFLAGS =     @libusb_cflags@ $(AM_CFLAGS)
-g15_CFLAGS =         @libusb_cflags@ $(AM_CFLAGS)
-picolcd_CFLAGS =     @libusb_cflags@ $(AM_CFLAGS)	
-shuttleVFD_CFLAGS =  @libusb_cflags@ $(AM_CFLAGS)
+IOWarrior_CFLAGS =   @LIBUSB_CFLAGS@ $(AM_CFLAGS)
+hd44780_CFLAGS =     @LIBUSB_CFLAGS@ $(AM_CFLAGS)
+g15_CFLAGS =         @LIBUSB_CFLAGS@ $(AM_CFLAGS)
+lis_CFLAGS =         @LIBFTDI_CFLAGS@ $(AM_CFLAGS)
+picolcd_CFLAGS =     @LIBUSB_CFLAGS@ $(AM_CFLAGS)	
+shuttleVFD_CFLAGS =  @LIBUSB_CFLAGS@ $(AM_CFLAGS)
+ula200_CFLAGS =      @LIBFTDI_CFLAGS@ $(AM_CFLAGS)
 
 CFontz_LDADD =       libLCD.a libbignum.a
 CFontz633_LDADD =    libLCD.a libbignum.a
@@ -35,28 +37,28 @@ curses_LDADD =       @LIBCURSES@
 CwLnx_LDADD =        libLCD.a libbignum.a
 g15_LDADD =          libLCD.a @LIBG15@
 glcdlib_LDADD =      libLCD.a @LIBGLCD@
-hd44780_LDADD =      libLCD.a @HD44780_DRIVERS@ @libusb_libs@ libbignum.a
+hd44780_LDADD =      libLCD.a @HD44780_DRIVERS@ @LIBUSB_LIBS@ libbignum.a
 hd44780_DEPENDENCIES = @HD44780_DRIVERS@
 icp_a106_LDADD =     libLCD.a
 imon_LDADD =         libLCD.a
-IOWarrior_LDADD =    @libusb_libs@ libLCD.a libbignum.a
+IOWarrior_LDADD =    @LIBUSB_LIBS@ libLCD.a libbignum.a
 irman_LDADD =        @LIBIRMAN@
 lcterm_LDADD =       libLCD.a
 lirc_LDADD =         @LIBLIRC_CLIENT@
-lis_LDADD =          libLCD.a @LIBFTDI@ libbignum.a
+lis_LDADD =          libLCD.a @LIBFTDI_LIBS@ libbignum.a
 MD8800_LDADD =       libLCD.a
 mtc_s16209x_LDADD =  libLCD.a
 MtxOrb_LDADD =       libLCD.a libbignum.a
 NoritakeVFD_LDADD =  libLCD.a libbignum.a
-picolcd_LDADD =      @libusb_libs@ libLCD.a libbignum.a
+picolcd_LDADD =      @LIBUSB_LIBS@ libLCD.a libbignum.a
 pyramid_LDADD =      libLCD.a
 serialPOS_LDADD =    libLCD.a libbignum.a
 serialVFD_LDADD =    libLCD.a libbignum.a
-shuttleVFD_LDADD =   @libusb_libs@ libLCD.a libbignum.a
+shuttleVFD_LDADD =   @LIBUSB_LIBS@ libLCD.a libbignum.a
 svga_LDADD =         @LIBSVGA@
 t6963_LDADD =        libLCD.a
 tyan_LDADD =         libLCD.a libbignum.a
-ula200_LDADD =       libLCD.a @LIBFTDI@
+ula200_LDADD =       libLCD.a @LIBFTDI_LIBS@
 sli_LDADD =          libLCD.a
 xosd_LDADD =         @LIBXOSD@
 
